force-app/main/default/objects/Employee_Safeguarding_Children__c/Employee_Safeguarding_Children__c.object-meta.xml
<CustomObject>
    <label>Employee Safeguarding Children</label>
    <nameField>
        <displayFormat>SGC-{0000}</displayFormat>
        <label>Employee Safeguaring Children Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees Safeguarding Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>