force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/ACF_and_COC_Complete__c.field-meta.xml
<CustomField>
    <fullName>ACF_and_COC_Complete__c</fullName>
    <formula>IF(isblank( ACF_Training_Completed_Date__c ), &quot;ACF Missing&quot;,&quot;&quot;)+
if(isblank( Code_Of_Conduct__c), &quot;Code of Conduct Missing&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACF and COC Complete</label>
    <type>Text</type>
</CustomField>