force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/ACF_Refresh__c.field-meta.xml
<CustomField>
    <fullName>ACF_Refresh__c</fullName>
    <label>ACF Refresh</label>
    <type>Date</type>
</CustomField>