force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/ACF_Training_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>ACF_Training_Completed_Date__c</fullName>
    <inlineHelpText>Date ACF training last completed.</inlineHelpText>
    <label>ACF Training Completed Date</label>
    <type>Date</type>
</CustomField>