force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/Code_Of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Code_Of_Conduct__c</fullName>
    <inlineHelpText>Date of last code of conduct signed.</inlineHelpText>
    <label>Code Of Conduct</label>
    <type>Date</type>
</CustomField>