force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employees Safeguarding Children</relationshipLabel>
    <relationshipName>Employees_Safeguarding_Children</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>