force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/Employee_Valid__c.field-meta.xml
<CustomField>
    <fullName>Employee_Valid__c</fullName>
    <formula>AND( WWCC_Valid__c =&quot;VALID&quot;,  ACF_and_COC_Complete__c =&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Valid</label>
    <type>Checkbox</type>
</CustomField>