force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/Safeguarding_Error__c.field-meta.xml
<CustomField>
    <fullName>Safeguarding_Error__c</fullName>
    <formula>ACF_and_COC_Complete__c + if( WWCC_Valid__c = &quot;VALID&quot;, &quot;&quot;,WWCC_Valid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safeguarding Error</label>
    <type>Text</type>
</CustomField>