force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/WWCC_Expiry__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Expiry__c</fullName>
    <inlineHelpText>What is their current number.</inlineHelpText>
    <label>WWCC Expiry</label>
    <type>Date</type>
</CustomField>