force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/WWCC_Number__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Number__c</fullName>
    <label>WWCC Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>