force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/WWCC_Type__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Type__c</fullName>
    <label>WWCC Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>