force-app/main/default/objects/Employee_Safeguarding_Children__c/fields/WWCC_Valid__c.field-meta.xml
<CustomField>
    <fullName>WWCC_Valid__c</fullName>
    <formula>if (isblank(WWCC_Number__c), &quot;No WWCC Number&quot;, 
if(isblank( WWCC_Expiry__c), &quot;No WWCC Expiry&quot;,  
if(WWCC_Expiry__c &lt; Today(), &quot;WWC Expired&quot;, 
if(WWCC_Expiry__c &lt; today()+90, &quot;WWC Expiring&quot;,  
&quot;VALID&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WWCC Valid</label>
    <type>Text</type>
</CustomField>